# rust-api

./: Cargo.toml  README.md
sql/: schema.sql  seeds.sql
src/: main.rs
src/api/: mod.rs
src/api/controllers/: user.rs
src/api/models/: user.rs
src/api/repositories/: user.rs
src/api/routers/: user.rs
src/api/services/: user.rs
