[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["runtime-async-std", "macros", "postgres"] }
serde = { version = "1.0.126", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.2.16"